Add error handling for create parcel

--- a/app/scanner/webapp/i18n/i18n.properties
+++ b/app/scanner/webapp/i18n/i18n.properties
@@ -12,6 +12,7 @@ title=Parcel POD
 
 overview.parcelList.headerText=Parcel List
 overview.parcelList.messageBox.confirm=Confirm parcel with ID {0}?
+overview.parcelList.messageBox.error=Parcel could not be created. Check if ID already exists.
 fragments.createParcelDialog.title=Create Parcel
 fragments.createParcelDialog.form.label.id=ID
 fragments.createParcelDialog.form.label.provider=Provider
