--- a/app/scanner/webapp/i18n/i18n_de.properties
+++ b/app/scanner/webapp/i18n/i18n_de.properties
@@ -12,6 +12,7 @@ title=Paket POD
 
 overview.parcelList.headerText=Paket Übersicht
 overview.parcelList.messageBox.confirm=Paket {0} quittieren?
+overview.parcelList.messageBox.error=Paket konnte nicht erfasst werden. Bitte ID prüfen und erneut probieren.
 fragments.createParcelDialog.title=Paket erfassen
 fragments.createParcelDialog.form.label.id=ID
 fragments.createParcelDialog.form.label.provider=Dienstleister
